--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid limegreen;
+    .border: 1px solid limegreen;
 }
 
 body {
@@ -19,9 +19,18 @@ body {
     width: 100vw;
 }
 
+h1 {
+    font-family: italian;
+    font-size: calc(4em - 1em);
+}
+
 .content {
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3em;
 }
 
 .content img {
@@ -47,23 +56,43 @@ body {
 .tabsContainer {
     display: flex;
     gap: 0.75em;
-    padding: 0.5em 2em;
-    position: relative;
-    z-index: 10;
 }
 
-.navButton {
+.tabsContainer .navButton {
+    padding: 0.5em 0.75em;
     background-color: transparent;
     color: white;
+    transition: transform 0.25s;
+    border: none;
 }
 
 .navButton:hover {
-    color: red;
+    transform: translateY(-0.2em);
 }
 
-
-h1 {
-    font-family: italian;
-    font-size: calc(4em - 1em);
+.navButton.selected {
+    border-bottom: 1px solid white;
 }
-domwodmo
+
+.home {
+    height: 400px;
+    width: 400px;
+    background-color: rgb(0, 0, 0, 0.6);
+}
+
+.menu {
+    height: 300px;
+    width: 300px;
+    background-color: rgba(0, 145, 255, 0.6);
+}
+
+.contact {
+    height: 200px;
+    width: 200px;
+    background-color: rgba(0, 255, 51, 0.6);
+}
+
+.mainContainer {
+    height: fit-content;
+    width: fit-content;
+}
